re PR rtl-optimization/34012 (Pessimization caused by fwprop)

PR rtl-optimization/34012
	* fwprop.c (try_fwprop_subst): Do not replace if the new
	SET_SRC has a higher cost than the old one.

	* gcc.target/i386/pr34012.c: New test.

Co-Authored-By: Jakub Jelinek <jakub@redhat.com>

From-SVN: r130043